# fastzero

./: .gitignore
server/: pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 1a4a2ba5a974_added_update_at_in_user_table.py  665b3fd81172_create_users_table.py
server/src/: app.py  settings.py
server/src/model/schemas/: user.py
server/tests/: conftest.py  test_app.py  test_db.py
